# Cataloger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/toolchains/: linux.cmake  macos.cmake  windows.cmake
doc/: BuildTestingDeployment.md  Phase3DevelopmentPlan.md  Pipelines.md  ProductOverview.md  README.md  SystemArchitecture.md  ViewerContract.md
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  Settings.cpp  Settings.h
src/mock_ui/: PreviewEventLogger.cpp  PreviewEventLogger.h
src/platform/: CMakeLists.txt  PlatformContext.cpp  PlatformContext.h
src/platform/gpu/: GpuBridge.h  GpuBridgeFactory.cpp  MetalBridge.mm
src/services/: CMakeLists.txt
src/services/catalog/: CMakeLists.txt  CatalogService.cpp  CatalogService.h
src/services/delivery/: CMakeLists.txt  DeliveryService.cpp  DeliveryService.h
src/services/ingest/: CMakeLists.txt  IngestService.cpp  IngestService.h
src/services/metadata/: CMakeLists.txt  MetadataService.cpp  MetadataService.h
src/services/preview/: CMakeLists.txt  ColorTransformer.cpp  ColorTransformer.h  DirectoryScanner.cpp  DirectoryScanner.h  GpuBridge.cpp  GpuBridge.h  IccProfileExtractor.cpp  IccProfileExtractor.h  PreviewCache.cpp  PreviewCache.h  PreviewExtractor.cpp  PreviewExtractor.h  PreviewService.cpp  PreviewService.h  PreviewTypes.h
src/services/tasks/: CMakeLists.txt  TaskScheduler.cpp  TaskScheduler.h
src/tests/perf/preview/: CMakeLists.txt  PreviewPipelinePerf.cpp
src/tests/unit/: CMakeLists.txt
src/tests/unit/catalog/: CMakeLists.txt  CatalogServiceTests.cpp
src/tests/unit/preview/: CMakeLists.txt  IccProfileExtractorTests.cpp  PreviewServiceTests.cpp
src/tests/unit/viewer/: CMakeLists.txt  MetalViewerTests.mm
src/ui/mock/: PreviewSubscriber.cpp  PreviewSubscriber.h
src/viewer/: CMakeLists.txt  ViewerContract.h
src/viewer/metal/: MetalViewer.mm
src/viewer/vulkan/: VulkanViewerStub.cpp
